<resources>
    <string name="app_name">Score Board</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="team_logo_desc">team logo</string>
    <string name="empty_data_user_msg">This team has no description yet!</string>
    <string name="alternative_names_label">Alternative names:</string>
    <string name="year_founded_label">Year Founded:</string>
    <string name="sport_category_label">Sport Category:</string>
    <string name="leagues_label">Leagues:</string>
    <string name="stadium_image_desc">stadium image</string>
    <string name="website_btn_label">Website</string>
    <string name="video_btn_label">Video</string>
    <string name="title_activity_match_details" translatable="false">MatchDetailsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="home">Home</string>
    <string name="away">Away</string>
    <string name="latest_15_events">Latest 15 events</string>
    <string name="more_details">Details</string>
    <string name="yellow_cards">YELLOW CARDS</string>
    <string name="goals">GOALS</string>
    <string name="next_15_events_title">Next 15 Events</string>
    <string name="no_website_available">Sorry currently not available!</string>
</resources>