<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/alt_name_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin16"
        android:layout_marginStart="@dimen/margin16"
        android:layout_marginTop="@dimen/margin16"
        android:text="@string/alternative_names_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/founded_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin16"
        android:layout_marginStart="@dimen/margin16"
        android:layout_marginTop="@dimen/margin16"
        android:text="@string/year_founded_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alt_name_label" />

    <TextView
        android:id="@+id/category_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin16"
        android:layout_marginStart="@dimen/margin16"
        android:layout_marginTop="@dimen/margin16"
        android:text="@string/sport_category_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/founded_label" />

    <TextView
        android:id="@+id/leagues_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin16"
        android:layout_marginStart="@dimen/margin16"
        android:layout_marginTop="@dimen/margin16"
        android:text="@string/leagues_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category_label" />

    <TextView
        android:id="@+id/team_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin16"
        android:layout_marginLeft="@dimen/margin16"
        android:layout_marginRight="@dimen/margin16"
        android:layout_marginStart="@dimen/margin16"
        android:layout_marginTop="@dimen/margin16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leagues" />

    <TextView
        android:id="@+id/alt_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin16"
        android:layout_marginLeft="@dimen/margin16"
        android:layout_marginRight="@dimen/margin16"
        android:layout_marginStart="@dimen/margin16"
        app:layout_constraintBaseline_toBaselineOf="@+id/alt_name_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/alt_name_label" />

    <TextView
        android:id="@+id/founded"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin16"
        android:layout_marginRight="@dimen/margin16"
        app:layout_constraintBaseline_toBaselineOf="@+id/founded_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/alt_name" />

    <TextView
        android:id="@+id/category"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin16"
        android:layout_marginRight="@dimen/margin16"
        app:layout_constraintBaseline_toBaselineOf="@+id/category_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/founded" />

    <TextView
        android:id="@+id/leagues"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin16"
        android:layout_marginRight="@dimen/margin16"
        app:layout_constraintBaseline_toBaselineOf="@+id/leagues_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/category" />

</androidx.constraintlayout.widget.ConstraintLayout>